--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,7 +357,7 @@ h6,
     top: 0;
     width: 130%;
     height: 95%;
-    background: linear-gradient(to right, rgba(30, 67, 86, 0.8), rgba(30, 67, 86, 0.6)), url("../img/pharo-cover.jpg") center top no-repeat;
+    background: linear-gradient(to right, rgba(30, 67, 86, 0.8), rgba(30, 67, 86, 0.6)), url("../img/pharo-cover.png") center top no-repeat;
     background-repeat: no-repeat;
     background-size: 100%;
     z-index: 0;
@@ -511,7 +511,7 @@ h6,
     top: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(to right, rgba(30, 67, 86, 0.8), rgba(30, 67, 86, 0.6)), url("../img/pharo-cover.jpg") center top no-repeat;
+    background: linear-gradient(to right, rgba(30, 67, 86, 0.8), rgba(30, 67, 86, 0.6)), url("../img/pharo-cover.png") center top no-repeat;
     background-repeat: no-repeat;
     background-size: 100%;
 }
